# RayTracing

./: CMakeLists.txt  README.md  packages.txt
Resources/: Materials.txt
Resources/Scenes/: Camels.txt  Mirror.txt  Scene1.txt  Scene2.txt  Scene3.txt  Scene4.txt  Scene5.txt  Sphere.txt  Spiders.txt  Tree.txt
Resources/meshes/: _linksToModels.txt  monokuma.mtl
Resources/meshes/animalsAndDinos/: camel.mtl  cow.mtl  edmontosaurs.mtl  giraffe.mtl  goat.mtl  kruton-iguanadon.mtl
Resources/shaders/: aabb.vert  directionalLightDepthShader.frag  directionalLightDepthShader.vert  simpleDepthShader.frag  simpleDepthShader.geom  simpleDepthShader.vert  tree.frag  tree.geom  tree.vert
Resources/shaders/rasterization/: draw_vectors_from_textures.frag  draw_vectors_from_textures.geom  draw_vectors_from_textures.vert  grid.frag  grid.geom  grid.vert  pointToCube.geom  rasterization.frag  rasterization.vert  shadowCubeMap.frag
Resources/shaders/raytracer/: draw_texture.frag  draw_texture.vert  prepare_camera_rays.comp  ray_tracing.comp  ray_tracing_measure_performance.comp  ray_tracing_v2.comp
Sources/: main.cpp
Sources/app/: App.cpp  App.h  BVHTree.cpp  BVHTree.h  DDAGridsCreatorAndSplitter.cpp  DDAGridsCreatorAndSplitter.h  DirectionalShadow.cpp  DirectionalShadow.h  GlobalSettings.h  GridDDA.cpp  GridDDA.h  Gui.h  Material.h  Model.cpp  Model.h  PointShadow.cpp  PointShadow.h  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h  tribox3.cpp  tribox3.h
Sources/app/DisplayModes/: DisplayModeAABB.h  DisplayModeDirectionalShadowMap.h  DisplayModeGrid.h  DisplayModeInterface.h  DisplayModeNormal.h  DisplayModePointShadowCubeMap.h  DisplayModeRasterization.h  DisplayModeTree.h
Sources/core/: Camera.cpp  Camera.h  Core.cpp  Core.h  GLFWCallbacks.cpp  OpenGLHandler.cpp  OpenGLHandler.h
Sources/include/: BVHTree.h  Buffer.h  Camera.h  CoreEngine.h  DDAGridsCreator.h  DirectionalSadow.h  DisplayModeDirectionalShadowMap.h  DisplayModeInterface.h  DisplayModeNormal.h  DisplayModePerformanceMeasure.h  DisplayModePointShadowCubeMap.h  DisplayModeRasterizationWithGrids.h  DisplayModeShadowCubeMap.h  DisplayModeTree.h  FrameBuffer.h  FrameCounter.h  GLFWCallbacks.h  GLSLShader.h  GridDDA.h  Gui.h  LoadMeshFromFile.h  Material.h  Model.h  OpenGLHandler.h  PointShadow.h  Scene.h  Temp_Lights.h  Temp_Spheres.h  Temp_Triangles.h  Texture2D.h  TextureCubeMap.h  TriangleMesh.h  Vertices.h  tribox3.h
Sources/ogl/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GLSLShader.cpp  GLSLShader.h  Texture2D.cpp  Texture2D.h  TextureCubeMap.cpp  TextureCubeMap.h  TextureInterface.cpp  TextureInterface.h  Vertices.cpp  Vertices.h
Sources/shaders/: aabb.vert  directionalLightDepthShader.frag  draw_cube_map.frag  draw_cube_map.vert  draw_texture.frag  draw_texture.vert  grid.vert  onlyColor.frag  pointToCube.geom  rasterization.vert  ray_tracing.comp  simpleDepthShader.geom  tree.vert
Sources/src/: Buffer.cpp  Camera.cpp  CoreEngine.cpp  DDAGridsCreator.cpp  FrameBuffer.cpp  GLFWCallbacks.cpp  GLSLShader.cpp  GridDDA.cpp  Model.cpp  OpenGLHandler.cpp  Scene.cpp  Temp_Lights.cpp  Temp_Spheres.cpp  Temp_Triangles.cpp  Texture2D.cpp  TextureCubeMap.cpp  TriangleMesh.cpp  Vertices.cpp  tribox3.cpp
